--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Jordan Majd
 description: BLE 5.0 Mech Keyboard w/ wireless charging.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/reverie.png
+avatar: /images/undraw_unicorn_dp2f.png
 
 #
 # Flags below are optional
