--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github:
+  github: /JordanMajd/ttykeyboards.com
   instagram:
   linkedin: 
   pinterest:
