--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: ttykeyboards
 author: Jordan Majd
 
 # Short bio or description (displayed in the header)
-description: BLE 5.0 Mech Keyboard w/ wireless charging.
+description: BLE 5.0 Mech Keyboard w/ Wireless Charging.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/undraw_unicorn_dp2f.png
