--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ baseurl:
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: /:title/
+permalink: posts/:title/
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
@@ -79,8 +79,8 @@ plugins:
 
 include: ['_pages']
 
-paginate: 6
-paginate_path: /page:num/
+paginate: 1
+paginate_path: /posts/:num/
 
 # Exclude these files from your production _site
 exclude:
