--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: ttykeyboards
 author: Jordan Majd
 
 # Short bio or description (displayed in the header)
-description: BLE 5.0 Mech Keyboard w/ Wireless Charging.
+description: Wire-Free Mechanical Keyboards
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/tty_unicorn.png
@@ -20,20 +20,15 @@ avatar: /images/tty_unicorn.png
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  dribbble:
   email:
   facebook:
-  flickr:
   github: /JordanMajd/ttykeyboards.com
-  instagram:
+  instagram: jordanmajd
   linkedin: 
   pinterest:
   rss: rss
   twitter: jordanmajd
   stackoverflow: 
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
-  playconsole:
 
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
