--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   email:
   facebook:
   github: /JordanMajd/ttykeyboards.com
-  instagram: jordanmajd
+  instagram:
   linkedin: 
   pinterest:
   rss: rss
