Add link to join discord server

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,8 @@ footer-links:
   pinterest:
   rss: rss
   twitter: jordanmajd
-  stackoverflow: 
+  stackoverflow:
+  discord: https://discord.gg/B8Zw4wq
 
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
