Update discord link

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ footer-links:
   rss: rss
   twitter: jordanmajd
   stackoverflow:
-  discord: https://discord.gg/B8Zw4wq
+  discord: https://discord.gg/uMQxabG
 
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
